force-app/main/default/objects/BusinessLicenseApplication/fields/ApplicationDateReceived__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDateReceived__c</fullName>
    <label>Application Date Received</label>
    <type>Date</type>
</CustomField>