force-app/main/default/objects/BusinessLicenseApplication/fields/ApplicationReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ApplicationReferenceNumber__c</fullName>
    <description>Unique identifies of application</description>
    <label>Application Reference Number</label>
    <type>AutoNumber</type>
</CustomField>