force-app/main/default/objects/BusinessLicenseApplication/fields/ApplicationReferenceNumberF__c.field-meta.xml
<CustomField>
    <fullName>ApplicationReferenceNumberF__c</fullName>
    <formula>IF( MONTH(ApplicationDateReceived__c)&lt;=6, RIGHT(TEXT(YEAR(ApplicationDateReceived__c)-1),2) &amp; &apos;/&apos; &amp; (RIGHT(TEXT(YEAR(ApplicationDateReceived__c)),2)), RIGHT(TEXT(YEAR(ApplicationDateReceived__c)),2) &amp; &apos;/&apos;&amp; RIGHT(TEXT(YEAR(ApplicationDateReceived__c)+1),2))&amp;&apos;-&apos;&amp;if(LEN(ApplicationReferenceNumber__c)=2,&quot;0&quot;,&quot;&quot;) &amp;if(LEN(ApplicationReferenceNumber__c)=1,&quot;00&quot;,&quot;&quot;)&amp;  ApplicationReferenceNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Reference Number</label>
    <type>Text</type>
</CustomField>