force-app/main/default/objects/BusinessLicenseApplication/fields/ApplicationStatusEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationStatusEffectiveDate__c</fullName>
    <description>Application Status Effective Date</description>
    <label>Application Status Effective Date</label>
    <type>Date</type>
</CustomField>