force-app/main/default/objects/BusinessLicenseApplication/fields/AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned To</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_License_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>