force-app/main/default/objects/BusinessLicenseApplication/fields/CaretypeApplicationObsolete__c.field-meta.xml
<CustomField>
    <fullName>CaretypeApplicationObsolete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to create validation on child records. Validation rule will block  users from editing the records when the application is obsolete.</description>
    <label>Care type Application Obsolete</label>
    <type>Checkbox</type>
</CustomField>