force-app/main/default/objects/BusinessLicenseApplication/fields/CaseRecordExists__c.field-meta.xml
<CustomField>
    <fullName>CaseRecordExists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Record Exists?</label>
    <type>Checkbox</type>
</CustomField>