force-app/main/default/objects/BusinessLicenseApplication/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact_Relationship__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Consultant</value>
        </filterItems>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Contact_Relationship__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact_Relationship__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Application</relationshipName>
    <type>Lookup</type>
</CustomField>