force-app/main/default/objects/BusinessLicenseApplication/fields/DateAllocated__c.field-meta.xml
<CustomField>
    <fullName>DateAllocated__c</fullName>
    <label>Date Allocated</label>
    <type>Date</type>
</CustomField>