force-app/main/default/objects/BusinessLicenseApplication/fields/DatetoDelegate__c.field-meta.xml
<CustomField>
    <fullName>DatetoDelegate__c</fullName>
    <label>Date to Delegate</label>
    <type>Date</type>
</CustomField>