force-app/main/default/objects/BusinessLicenseApplication/fields/DelegateDecisionDueBy__c.field-meta.xml
<CustomField>
    <fullName>DelegateDecisionDueBy__c</fullName>
    <label>Delegate Decision Due By</label>
    <type>Date</type>
</CustomField>