force-app/main/default/objects/BusinessLicenseApplication/fields/DuplicateActiveApplicationExist__c.field-meta.xml
<CustomField>
    <fullName>DuplicateActiveApplicationExist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Active Application Exist</label>
    <type>Checkbox</type>
</CustomField>