force-app/main/default/objects/BusinessLicenseApplication/fields/DuplicateCareType__c.field-meta.xml
<CustomField>
    <fullName>DuplicateCareType__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Care Type</label>
    <type>Checkbox</type>
</CustomField>