force-app/main/default/objects/BusinessLicenseApplication/fields/LegacyApplicationNumber__c.field-meta.xml
<CustomField>
    <fullName>LegacyApplicationNumber__c</fullName>
    <label>Legacy Application Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>