force-app/main/default/objects/BusinessLicenseApplication/fields/NewStatus__c.field-meta.xml
<CustomField>
    <fullName>NewStatus__c</fullName>
    <label>New Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CurrentStatus__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Application submission receipt</fullName>
                <default>true</default>
                <label>Application submission receipt</label>
            </value>
            <value>
                <fullName>Applicant applied to AAT</fullName>
            </value>
            <value>
                <fullName>Application invalid - not accepted</fullName>
            </value>
            <value>
                <fullName>Application not required - already approved</fullName>
            </value>
            <value>
                <fullName>Application submitted - Fee payment pending</fullName>
            </value>
            <value>
                <fullName>Assessment not required - taken to be approved</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Delegate&apos;s Decision</fullName>
            </value>
            <value>
                <fullName>Fee waiver decision</fullName>
            </value>
            <value>
                <fullName>Fee waiver review</fullName>
            </value>
            <value>
                <fullName>Finalise</fullName>
            </value>
            <value>
                <fullName>For fee waiver</fullName>
            </value>
            <value>
                <fullName>Formal Assessment RFI - Fee payment pending</fullName>
            </value>
            <value>
                <fullName>Formal Assessment RFI Response Pending</fullName>
            </value>
            <value>
                <fullName>Initial Assessment RFI - Fee payment pending</fullName>
            </value>
            <value>
                <fullName>Initial Assessment RFI Response pending</fullName>
            </value>
            <value>
                <fullName>Reconsideration Assessment</fullName>
            </value>
            <value>
                <fullName>RFI Approval</fullName>
            </value>
            <value>
                <fullName>RFI Extension Decision</fullName>
            </value>
            <value>
                <fullName>RFI Extension Request</fullName>
            </value>
            <value>
                <fullName>Under Formal Assessment</fullName>
            </value>
            <value>
                <fullName>Under Initial Assessment</fullName>
            </value>
            <value>
                <fullName>Under Quality Review</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
            </value>
            <value>
                <fullName>For Quality Review</fullName>
            </value>
            <value>
                <fullName>For Initial Assessment</fullName>
            </value>
            <value>
                <fullName>For Formal Assessment</fullName>
            </value>
            <value>
                <fullName>For Delegate&apos;s Decision</fullName>
            </value>
            <value>
                <fullName>Reconsideration request review</fullName>
            </value>
            <value>
                <fullName>Reconsideration Decisions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>