force-app/main/default/objects/BusinessLicenseApplication/fields/OracleID__c.field-meta.xml
<CustomField>
    <fullName>OracleID__c</fullName>
    <label>Oracle ID</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>