force-app/main/default/objects/BusinessLicenseApplication/fields/PaymentReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>PaymentReferenceNumber__c</fullName>
    <label>Payment Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>