force-app/main/default/objects/BusinessLicenseApplication/fields/Reconsideration__c.field-meta.xml
<CustomField>
    <fullName>Reconsideration__c</fullName>
    <formula>IF(CaseRecordExists__c,&quot;Yes&quot;,&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reconsideration</label>
    <type>Text</type>
</CustomField>