force-app/main/default/objects/BusinessLicenseApplication/fields/ReconsiderationOutcomeNotRecorded__c.field-meta.xml
<CustomField>
    <fullName>ReconsiderationOutcomeNotRecorded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reconsideration Outcome Not Recorded</label>
    <type>Checkbox</type>
</CustomField>