force-app/main/default/objects/BusinessLicenseApplication/fields/ReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ReferenceNumber__c</fullName>
    <label>Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>