force-app/main/default/objects/BusinessLicenseApplication/fields/ReportFilterID__c.field-meta.xml
<CustomField>
    <fullName>ReportFilterID__c</fullName>
    <formula>CASESAFEID(Account.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Filter ID</label>
    <type>Text</type>
</CustomField>