force-app/main/default/objects/BusinessLicenseApplication/fields/RFISenttoReviewerorDelegate__c.field-meta.xml
<CustomField>
    <fullName>RFISenttoReviewerorDelegate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFI Sent to Reviewer or Delegate</label>
    <type>Checkbox</type>
</CustomField>