force-app/main/default/objects/BusinessLicenseApplication/fields/SameAssessor__c.field-meta.xml
<CustomField>
    <fullName>SameAssessor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Assessor?</label>
    <type>Checkbox</type>
</CustomField>