force-app/main/default/objects/BusinessLicenseApplication/fields/SameDelegate__c.field-meta.xml
<CustomField>
    <fullName>SameDelegate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Delegate?</label>
    <type>Checkbox</type>
</CustomField>