force-app/main/default/objects/BusinessLicenseApplication/fields/SameReviewer__c.field-meta.xml
<CustomField>
    <fullName>SameReviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Reviewer?</label>
    <type>Checkbox</type>
</CustomField>