force-app/main/default/objects/BusinessLicenseApplication/fields/UnderFormalAssessmentDate__c.field-meta.xml
<CustomField>
    <fullName>UnderFormalAssessmentDate__c</fullName>
    <description>This is to save the date that an application status changes to &quot;Under Formal Assessment&quot;.</description>
    <label>Under Formal Assessment Date</label>
    <type>Date</type>
</CustomField>