force-app/main/default/objects/BusinessLicenseApplication/fields/UnderFormalAssessmentDaysCalculation__c.field-meta.xml
<CustomField>
    <fullName>UnderFormalAssessmentDaysCalculation__c</fullName>
    <formula>IF(TODAY() - UnderFormalAssessmentDate__c  &lt;= $Setup.TimeToAssessApplication__c.Days__c , &apos;Decision due in&apos;+ &apos; &apos;+ TEXT($Setup.TimeToAssessApplication__c.Days__c -(TODAY() - UnderFormalAssessmentDate__c))+ &apos; &apos; + &apos;days&apos;,&apos;Decision overdue by&apos;+ &apos; &apos; + TEXT ((TODAY() - UnderFormalAssessmentDate__c)- $Setup.TimeToAssessApplication__c.Days__c)+ &apos; &apos; + &apos;days&apos;)</formula>
    <label>Under Formal Assessment Days Calculation</label>
    <type>Text</type>
</CustomField>