force-app/main/default/objects/BusinessLicenseApplication/recordTypes/CaretypeApplicationAssessmentAndReview.recordType-meta.xml
<RecordType>
    <fullName>CaretypeApplicationAssessmentAndReview</fullName>
    <active>true</active>
    <description>Caretype Application - Assessment And Review</description>
    <label>Caretype Application - Assessment And Review</label>
</RecordType>