force-app/main/default/objects/BusinessLicenseApplication/recordTypes/CaretypeApplicationClosed.recordType-meta.xml
<RecordType>
    <fullName>CaretypeApplicationClosed</fullName>
    <active>true</active>
    <description>Caretype Application - Closed</description>
    <label>Caretype Application - Closed</label>
</RecordType>