force-app/main/default/objects/BusinessLicenseApplication/recordTypes/CaretypeApplicationClosedlockedInactive.recordType-meta.xml
<RecordType>
    <fullName>CaretypeApplicationClosedlockedInactive</fullName>
    <active>true</active>
    <description>Caretype Application -  Closed locked inactive</description>
    <label>Caretype Application - Closed locked - Inactive</label>
</RecordType>