force-app/main/default/objects/BusinessLicenseApplication/recordTypes/CaretypeApplicationDelgatedecision.recordType-meta.xml
<RecordType>
    <fullName>CaretypeApplicationDelgatedecision</fullName>
    <active>true</active>
    <description>Caretype Application - Delgate decision</description>
    <label>Caretype Application - Delgate decision</label>
</RecordType>