force-app/main/default/objects/BusinessLicenseApplication/recordTypes/CaretypeApplicationNotRequiredTakenToBeApproved.recordType-meta.xml
<RecordType>
    <fullName>CaretypeApplicationNotRequiredTakenToBeApproved</fullName>
    <active>true</active>
    <description>Caretype Application - Not Required - Taken To Be Approved</description>
    <label>Caretype Application - Not Required - Taken To Be Approved</label>
</RecordType>