force-app/main/default/objects/BusinessLicenseApplication/recordTypes/CaretypeApplicationSubmitted.recordType-meta.xml
<RecordType>
    <fullName>CaretypeApplicationSubmitted</fullName>
    <active>true</active>
    <description>Caretype Application - Submitted</description>
    <label>Caretype Application - Submitted</label>
</RecordType>