force-app/main/default/objects/BusinessLicenseApplication/validationRules/NewStatusCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>NewStatusCheck</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
NOT(ISPICKVAL( NewStatus__c , &apos;Application submission receipt&apos;)),
ISPICKVAL( CurrentStatus__c , &apos;Application submission receipt&apos;)
)</errorConditionFormula>
    <errorDisplayField>NewStatus__c</errorDisplayField>
    <errorMessage>Please select  &apos;Application submission receipt&apos; as new status at this stage.</errorMessage>
</ValidationRule>