force-app/main/default/objects/BusinessLicenseApplication/validationRules/PaymentReferenceNumberEditCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>PaymentReferenceNumberEditCheck</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.BypassTriggers__c.BypassValidationRules__c),NOT(ISNEW()),ISCHANGED(PaymentReferenceNumber__c),NOT(ISPICKVAL(NewStatus__c,&apos;Application submission receipt&apos;)))</errorConditionFormula>
    <errorMessage>Payment Reference Number cannot be updated.</errorMessage>
</ValidationRule>