force-app/main/default/objects/BusinessLicenseApplication/validationRules/ReconsiderationOutcomeCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>ReconsiderationOutcomeCheck</fullName>
    <active>true</active>
    <description>Checks if reconsideration outcome recorded before closing the application.</description>
    <errorConditionFormula>ReconsiderationOutcomeNotRecorded__c == true</errorConditionFormula>
    <errorMessage>Please record &apos;Reconsideration Outcome&apos; before closing the application.</errorMessage>
</ValidationRule>