force-app/main/default/objects/BusinessLicenseApplication/validationRules/SameAssessorCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>SameAssessorCheck</fullName>
    <active>true</active>
    <errorConditionFormula>SameAssessor__c == true</errorConditionFormula>
    <errorMessage>&apos;This user was a part of the initial assessment process. Please select another user.&apos;</errorMessage>
</ValidationRule>