force-app/main/default/objects/BusinessLicenseApplication/validationRules/SameDelegateCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>SameDelegateCheck</fullName>
    <active>true</active>
    <errorConditionFormula>SameDelegate__c == true</errorConditionFormula>
    <errorMessage>&apos;This user was a part of the initial delegation process. Please select another user.&apos;</errorMessage>
</ValidationRule>