force-app/main/default/objects/BusinessLicenseApplication/validationRules/SameReviewerCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>SameReviewerCheck</fullName>
    <active>true</active>
    <errorConditionFormula>SameReviewer__c == true</errorConditionFormula>
    <errorMessage>&apos;This user was a part of the initial review process. Please select another user.&apos;</errorMessage>
</ValidationRule>