force-app/main/default/objects/BusinessLicenseApplication/validationRules/VR01APPAppStatusCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01APPAppStatusCheck</fullName>
    <active>false</active>
    <description>Application Status cannot be set to &apos;For Assessment&apos; or &apos;Under Review&apos; if &apos;Payment Reference Number&apos; isn&apos;t provided</description>
    <errorConditionFormula>AND(NOT($Setup.BypassTriggers__c.BypassValidationRules__c),ISBLANK(PaymentReferenceNumber__c),ISPICKVAL(NewStatus__c, &apos;For Initial Assessment&apos;) || ISPICKVAL(NewStatus__c, &apos;Under Quality Review&apos;) || ISPICKVAL(NewStatus__c, &apos;Under Formal Assessment&apos;))</errorConditionFormula>
    <errorDisplayField>PaymentReferenceNumber__c</errorDisplayField>
    <errorMessage>Please provide &apos;Payment Reference Number&apos; before setting &apos;Application Status&apos; to &apos;For Assessment&apos;, &apos;Under Review&apos; or &apos;Under Assessment&apos;.</errorMessage>
</ValidationRule>