force-app/main/default/objects/BusinessLicenseApplication/validationRules/VR02APPAppDateReceived.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02APPAppDateReceived</fullName>
    <active>true</active>
    <description>Application Date Received cannot be a future date</description>
    <errorConditionFormula>ApplicationDateReceived__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Application Date Received cannot be a future date</errorMessage>
</ValidationRule>