force-app/main/default/objects/BusinessLicenseApplication/validationRules/VR03APPStatusApplicationFeePending.validationRule-meta.xml
<ValidationRule>
    <fullName>VR03APPStatusApplicationFeePending</fullName>
    <active>true</active>
    <description>Owner must be changed to a user before status is changed to &apos;Application submitted - Fee payment pending&apos;</description>
    <errorConditionFormula>AND(ISBLANK(Owner:User.Id),TEXT(NewStatus__c)=&quot;Application submitted - Fee payment pending&quot;)</errorConditionFormula>
    <errorMessage>Owner must be changed to a user before status is changed to &apos;Application submitted - Fee payment pending&apos;.</errorMessage>
</ValidationRule>