force-app/main/default/objects/BusinessLicenseApplication/validationRules/VR03APPStatusUnderInitialAssessment.validationRule-meta.xml
<ValidationRule>
    <fullName>VR03APPStatusUnderInitialAssessment</fullName>
    <active>true</active>
    <description>Owner must be changed to a user before status is changed to &apos;Under Initial Assessment&apos;</description>
    <errorConditionFormula>AND(ISBLANK(Owner:User.Id),TEXT(NewStatus__c)=&quot;Under Initial Assessment&quot;)</errorConditionFormula>
    <errorMessage>Owner must be changed to a user before status is changed to &apos;Under Initial Assessment&apos;.</errorMessage>
</ValidationRule>