force-app/main/default/objects/BusinessLicenseApplication/validationRules/VR04APPStatusUnderReview.validationRule-meta.xml
<ValidationRule>
    <fullName>VR04APPStatusUnderReview</fullName>
    <active>true</active>
    <description>Owner must be changed to a user before status is changed to &apos;Under Review&apos;</description>
    <errorConditionFormula>AND(ISBLANK(Owner:User.Id),TEXT(NewStatus__c)=&quot;Under Quality Review&quot;)</errorConditionFormula>
    <errorMessage>Owner must be changed to a user before status is changed to &apos;Under Quality Review&apos;.</errorMessage>
</ValidationRule>