force-app/main/default/objects/BusinessLicenseApplication/validationRules/VR05APPDelegatesDecision.validationRule-meta.xml
<ValidationRule>
    <fullName>VR05APPDelegatesDecision</fullName>
    <active>true</active>
    <description>Owner must be changed to a user before status is changed to &apos;Delegate&apos;s Decision&apos;.</description>
    <errorConditionFormula>AND(ISBLANK(Owner:User.Id),TEXT(NewStatus__c)=&quot;Delegate&apos;s Decision&quot;)</errorConditionFormula>
    <errorMessage>Owner must be changed to a user before status is changed to &apos;Delegate&apos;s Decision&apos;.</errorMessage>
</ValidationRule>