force-app/main/default/objects/BusinessLicenseApplication/validationRules/VR06APPDuplicate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR06APPDuplicate</fullName>
    <active>false</active>
    <description>Only one active application can exist.</description>
    <errorConditionFormula>DuplicateActiveApplicationExist__c = TRUE</errorConditionFormula>
    <errorMessage>There is already an active application form.</errorMessage>
</ValidationRule>