force-app/main/default/objects/BusinessLicenseApplication/listViews/Admin_Officer_BusinessLicenseApplication.listView-meta.xml
<ListView>
    <fullName>Admin_Officer_BusinessLicenseApplication</fullName>
    <filterScope>Queue</filterScope>
    <label>Admin Officer</label>
    <queue>Admin_Officer</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>