force-app/main/default/objects/BusinessLicenseApplication/listViews/Assessor_BusinessLicenseApplication.listView-meta.xml
<ListView>
    <fullName>Assessor_BusinessLicenseApplication</fullName>
    <filterScope>Queue</filterScope>
    <label>Assessor</label>
    <queue>Assessor</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>