force-app/main/default/objects/BusinessLicenseApplication/listViews/Delegate_BusinessLicenseApplication.listView-meta.xml
<ListView>
    <fullName>Delegate_BusinessLicenseApplication</fullName>
    <filterScope>Queue</filterScope>
    <label>Delegate</label>
    <queue>Delegate</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>