force-app/main/default/objects/BusinessLicenseApplication/listViews/Delegate_Decision.listView-meta.xml
<ListView>
    <fullName>Delegate_Decision</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>AppliedDate</columns>
    <columns>LicenseType</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>For Delegate&apos;s Decision</value>
    </filters>
    <label>Delegate Decision</label>
</ListView>