force-app/main/default/objects/BusinessLicenseApplication/listViews/For_Review.listView-meta.xml
<ListView>
    <fullName>For_Review</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>AppliedDate</columns>
    <columns>LicenseType</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Under Quality Review</value>
    </filters>
    <label>For Review</label>
</ListView>