force-app/main/default/objects/BusinessLicenseApplication/listViews/Reviewer_BusinessLicenseApplication.listView-meta.xml
<ListView>
    <fullName>Reviewer_BusinessLicenseApplication</fullName>
    <filterScope>Queue</filterScope>
    <label>Reviewer</label>
    <queue>Reviewer</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>